<resources>
    <string name="app_name">Bot Libre Offline</string>
    <string name="title">Bot Libre!</string>
    <string name="chatwithyourBot">Your Bot</string>
    <string name="upgrade">Upgrade</string>
    <string name="about">About</string>
    <string name="myBot">My Bot</string>
    <string name="myBots">My Bots</string>
    <string name="signIn">Sign In</string>
    <string name="signUp">Sign Up</string>
    <string name="signOut">Sign Out</string>
    <string name="viewProfile">View Profile</string>
    <string name="editProfile">Edit Profile</string>
    <string name="changeIcon">Change Icon</string>
    <string name="edit">Edit</string>
    <string name="users">Users</string>
    <string name="editor">Editor</string>
    <string name="delete">Delete</string>
    <string name="channelBot">Channel Bot</string>
    <string name="adminConsole">Admin Console</string>
    <string name="voice">Voice</string>
    <string name="youSay">You say</string>
    <string name="categoires">Categories</string>
    <string name="upload">Upload</string>
    <string name="avatar">Avatar</string>
    <string name="speechRate">Speech Rate</string>
    <string name="voteUp">Vote Up</string>
    <string name="trainingChatLogs">Training/Chat Logs</string>
    <string name="source">Source</string>
    <string name="type">Type</string>
    <string name="scripts">Scripts</string>
    <string name="userID">User ID</string>
    <string name="learning">Learning</string>
    <string name="twitter">Twitter</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="upgradeToGold">Upgrade to Gold</string>
    <string name="save">Save</string>
    <string name="ViewPost">View Post</string>
    <string name="talking">Talking</string>
    <string name="uploadImage">Upload Image</string>
    <string name="name">Name</string>
    <string name="tagMedia">Tag Media</string>
    <string name="emotions">Emotions</string>
    <string name="userFlagged">This user has be flagged</string>
    <string name="upgradeToPlatinum">Upgrade to Platinum</string>
    <string name="test">Test</string>
    <string name="actions">Actions</string>
    <string name="thumbsDown">Thumbs Down</string>
    <string name="poses">Poses</string>
    <string name="sort">Sort</string>
    <string name="deviceVoice">Device Voice</string>
    <string name="browse">Browse</string>
    <string name="create">Create</string>
    <string name="compile">Compile</string>
    <string name="scriptEditor">Script Editor</string>
    <string name="chat">Chat</string>
    <string name="viewCreater">View Creator</string>
    <string name="webm">Webm</string>
    <string name="tags">Tags</string>
    <string name="websiteOptional">Website (optional)</string>
    <string name="topic">Topic</string>
    <string name="subdomain">Subdomain</string>
    <string name="viewReply">View Reply</string>
    <string name="thumbsUp">Thumbs Up</string>
    <string name="template">Template</string>
    <string name="thisIsATest">This is a test, testing 1, 2, 3</string>
    <string name="submit">Submit</string>
    <string name="upgradeText1">Upgrade your account for an ad free interface.</string>
    <string name="videoAccessMode">Video Access Mode</string>
    <string name="yourEmailAddress">Your email address</string>
    <string name="startWarText1">Select two bots to start a chat bot war. Who wins? You decide.</string>
    <string name="webmVideo">Webm Video</string>
    <string name="createAvatar">Create Avatar</string>
    <string name="aPrivate">Private</string>
    <string name="hidden">Hidden</string>
    <string name="contentRating">Content Rating</string>
    <string name="createBot">Create Bot</string>
    <string name="createDomain">Create Domain</string>
    <string name="createFourm">Create Forum</string>
    <string name="post">Post</string>
    <string name="cancel">Cancel</string>
    <string name="viewUser">View User</string>
    <string name="viewPrevious">View Previous</string>
    <string name="startWar">Start War</string>
    <string name="speak">Speak</string>
    <string name="userIDorEmail">User ID (or email)</string>
    <string name="unflag">Unflag</string>
    <string name="subscribe">Subscribe</string>
    <string name="synthesizeResponse">Synthesis Response</string>
    <string name="voteDown">Vote Down</string>
    <string name="wiktionary">Wiktionary</string>
    <string name="whisper">Whisper</string>
    <string name="upgradeToBronze">Upgrade to Bronze</string>
    <string name="viewNext">View Next</string>
    <string name="play">Play</string>
    <string name="select">Select</string>
    <string name="searchPosts">Search Posts</string>
    <string name="responseMatching">Response Matching</string>
    <string name="requiredPrevious">Required Previous</string>
    <string name="pitch">Pitch</string>
    <string name="responseTimeout">Response Timeout</string>
    <string name="ping">Ping</string>
    <string name="scriptFlagged">This script has been flagged</string>
    <string name="restrict">Restrict</string>
    <string name="search">Search</string>
    <string name="newPost">New Post</string>
    <string name="createGraphic">Create Graphic</string>
    <string name="reply">Reply</string>
    <string name="replyToParent">Reply to parent</string>
    <string name="createScript">Create Script</string>
    <string name="language">Language</string>
    <string name="showName">Show Name</string>
    <string name="editDomain">Edit Domain</string>
    <string name="editForum">Edit Forum</string>
    <string name="editPost">Edit Post</string>
    <string name="featured">Featured</string>
    <string name="editGraphic">Edit Graphic</string>
    <string name="editUser">Edit User</string>
    <string name="fourmBot">Forum Bot</string>
    <string name="browsePosts">Browse Posts</string>
    <string name="download">Download</string>
    <string name="faq">FAQ</string>
    <string name="forum">Forum</string>
    <string name="helpBot">Help Bot</string>
    <string name="liveSupport">Live Support</string>
    <string name="email">Email</string>
    <string name="help">Help</string>
    <string name="emoting">Emoting</string>
    <string name="comprehension">Comprehension</string>
    <string name="consciousness">Consciousness</string>
    <string name="last">Last</string>
    <string name="customAvatar">Custom Avatar</string>
    <string name="noRepeat">No Repeat</string>
    <string name="showImages">Show Images</string>
    <string name="allPosts">All posts</string>
    <string name="myPosts">My posts</string>
    <string name="aPublic">Public</string>
    <string name="selectFirstBot">Select First Bot</string>
    <string name="selectSecondBot">Select Second Bot</string>
    <string name="chatBotWar">Chat Bot War</string>
    <string name="languageAndVoice">Language &amp; Voice</string>
    <string name="clearPurchases">Clear Purchases</string>
    <string name="question">Question</string>
    <string name="sendFile">Send File</string>
    <string name="scriptTimeout">Script Timeout</string>
    <string name="scriptUp">Script Up</string>
    <string name="requiredWords">Required Words</string>
    <string name="posts">Posts</string>
    <string name="searchAllPosts">Search All Posts</string>
    <string name="pickFromWWW">Pick from: http://www.daz3d.com/people-and-wearables-genesis-3 \n(may require extra cost)</string>
    <string name="scriptDown">Script Down</string>
    <string name="setBackground">Set background</string>
    <string name="rate">Rate</string>
    <string name="activityAboutText1">Chat Bot Wars let you engage two chat bots in a conversational battle. Who wins? You decide.</string>
    <string name="activityAboutText2">You can browse our library of thousands of bots, or create your own bot to do battle.</string>
    <string name="activityAboutText3">The more battles you win the higher your rank.</string>
    <string name="previous">Previous</string>
    <string name="postAccessMode">Post Access Mode</string>
    <string name="postFlagged">This post has be flagged</string>
    <string name="sendImage">Send Image</string>
    <string name="response">Response</string>
    <string name="replyAccessMode">Reply Access Mode</string>
    <string name="passwordHint">Password Hint (optional)</string>
    <string name="modelNameorURL">Model Name or URL</string>
    <string name="password">Password</string>
    <string name="onRepeat">On Repeat</string>
    <string name="newPassword">New Password</string>
    <string name="learningRate">Learning Rate %</string>
    <string name="hairStyle">Hair Style</string>
    <string name="importScript">Import Script</string>
    <string name="myForums">My Forums</string>
    <string name="helpText1">Welcome to help. Check our FAQ or forums, chat with our Help Bot or our live support experts. Email us, or find additional resources on our website.</string>
    <string name="markValid">Mark Valid</string>
    <string name="hairColor">Hair Color</string>
    <string name="keepAlive">Keep Alive</string>
    <string name="noAds">No Ads</string>
    <string name="keywords">Keywords</string>
    <string name="graphics">Graphics</string>
    <string name="handsFreeSpeech">Hands Free Speech</string>
    <string name="importResponses">Import Responses</string>
    <string name="avatarEditor">Avatar Editor</string>
    <string name="hd">HD</string>
    <string name="action">Action</string>
    <string name="avatarFlagged">This avatar has been flagged</string>
    <string name="activeStripts">Active Scripts</string>
    <string name="botFlagged">This bot has be flagged</string>
    <string name="bot">Bot</string>
    <string name="botMode">Bot Mode</string>
    <string name="channelFlagged">This channel has be flagged</string>
    <string name="description">Description</string>
    <string name="details">Details (optional)</string>
    <string name="disclaimer">Disclaimer (optional)</string>
    <string name="license">License (optional)</string>
    <string name="accessMode">Access Mode</string>
    <string name="forkAccessMode">Fork Access Mode</string>
    <string name="channelType">Channel Type</string>
    <string name="audioAccessMode">Audio Access Mode</string>
    <string name="creationMode">Creation Mode</string>
    <string name="aDetails">Details</string>
    <string name="fullName">Full Name (optional)</string>
    <string name="emailReco">Email (recommended)</string>
    <string name="bio">Bio (optional)</string>
    <string name="domainFlagged">This domain has be flagged</string>
    <string name="editBot">Edit Bot</string>
    <string name="editAvatar">Edit Avatar</string>
    <string name="editChannel">Edit Channel</string>
    <string name="editScript">Edit Script</string>
    <string name="currentPassword">Current Password</string>
    <string name="forumFlagged">This forum has be flagged</string>
    <string name="graphicFlagged">This graphic has been flagged</string>
    <string name="learningMode">Learning Mode</string>
    <string name="correctionMode">Correction Mode</string>
    <string name="conversationMatch">Conversation Match %</string>
    <string name="discussionMatch">Discussion Match %</string>
    <string name="checkExactMatchFirst">Check Exact Match First</string>
    <string name="fixTempateCase">Fix Template Case</string>
    <string name="learnGrammar">Learn Grammar</string>
    <string name="markInvalid">Mark Invalid</string>
    <string name="hdImages">HD Images</string>
    <string name="hdVideo">HD Video</string>
    <string name="face">Face</string>
    <string name="eyeColor">Eye Color</string>
    <string name="label">Label</string>
    <string name="browseAllPosts">Browse All Posts</string>
    <string name="browseCategories">Browse Categories</string>
    <string name="browseFeaturedPosts">Browse Featured Posts</string>
    <string name="browseFeatured">Browse Featured</string>
    <string name="pose">Pose</string>
</resources>