<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical" >
    
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
    	android:gravity="fill_horizontal"
		android:background="#eee">
	
	    <ImageView
	        android:id="@+id/icon"
	        android:layout_width="32sp"
	        android:layout_height="32sp"
	        android:layout_margin="4sp"
	        android:background="@drawable/icon" />
	    
		<TextView
		    android:id="@+id/title"
		    android:layout_width="0px"
		    android:layout_height="wrap_content"
		    android:layout_margin="8sp"
		    android:layout_weight="1"
		    android:text="@string/signUp"
		    android:textSize="18sp" />
		
		<Button
			android:id="@+id/helpButton"
	        android:layout_width="32sp"
	        android:layout_height="32sp"
	        android:layout_margin="4sp"
	        android:background="@drawable/help"
			android:onClick="help"
			android:text="" />
		
	</LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
		android:background="#ddd">
    </View>
    
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:fillViewport="true"
        android:scrollbars="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/userText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/userID"
                android:imeOptions="actionDone"
                android:inputType="text" />

            <EditText
                android:id="@+id/passwordText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/hintText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/passwordHint"
                android:imeOptions="actionDone"
                android:inputType="text" />

            <EditText
                android:id="@+id/nameText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fullName"
                android:imeOptions="actionDone"
                android:inputType="text" />

            <CheckBox
                android:id="@+id/showNameCheckBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/showName" />

            <EditText
                android:id="@+id/emailText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/emailReco"
                android:imeOptions="actionDone"
                android:inputType="text" />

            <EditText
                android:id="@+id/websiteText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/websiteOptional"
                android:imeOptions="actionDone"
                android:inputType="text" />

            <EditText
                android:id="@+id/bioText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="top"
                android:hint="@string/bio"
                android:inputType="textMultiLine" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content" >

                <Button
                    android:id="@+id/createButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/ok_button"
                    android:onClick="create"
                    android:text="@string/create"
                    android:textColor="@color/lgrey" />

                <!-- <Button
                    android:id="@+id/cancelButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="1dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/cancel_button"
                    android:onClick="cancel"
                    android:text="@string/cancel"
                    android:textColor="@color/dgrey" /> -->
            </LinearLayout>
        </LinearLayout>
	</ScrollView>
</LinearLayout>

