<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="#FFFFFF"
	android:gravity="fill_vertical"
	android:orientation="vertical" >
	
	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal"
    	android:gravity="fill_horizontal"
		android:background="#eee">
	
	    <ImageView
	        android:id="@+id/icon"
	        android:layout_width="32sp"
	        android:layout_height="32sp"
	        android:layout_margin="4sp" />
	    
		<TextView
		    android:id="@+id/title"
	        android:layout_width="0px"
	        android:layout_weight="1"
			android:layout_height="wrap_content"
            android:textSize="18sp"
	        android:layout_margin="8sp"
			android:text=""/>
		
	    <Button
	        android:id="@+id/propertiesButton"
	        android:layout_width="32sp"
	        android:layout_height="32sp"
	        android:layout_margin="4sp"
	        android:background="@drawable/properties"
	        android:onClick="toggleProperties"
	        android:text="" />
		
	</LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2px"
		android:background="#ddd">
    </View>
    
	<LinearLayout
		android:id="@+id/avatarLayout"
		android:layout_width="fill_parent"
		android:layout_height="0px"
		android:layout_weight="3"
		android:orientation="horizontal" >
		
	<ImageView
		android:id="@+id/imageView"
		android:layout_width="0px"
		android:layout_height="fill_parent"
		android:layout_weight="1"
		android:adjustViewBounds="true"
		android:contentDescription="bot"
		android:src="@drawable/bot" />
		
	<RelativeLayout
		android:id="@+id/videoLayout"
		android:layout_width="0px"
		android:layout_height="fill_parent"
		android:layout_weight="1"
		android:orientation="horizontal"
		android:visibility="gone" >
		
	<VideoView
		android:id="@+id/videoView"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
		android:adjustViewBounds="true"
        android:layout_centerInParent="true"
		android:contentDescription="avatar"
		android:background="@android:color/transparent" />
	
	</RelativeLayout>
        
    </LinearLayout>
	
	<LinearLayout
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:orientation="horizontal" >
		
		<EditText
			android:id="@+id/messageText"
			android:layout_width="0px"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:hint="@string/youSay"
			android:imeOptions="actionDone"
			android:inputType="text" />

		<ImageButton
			android:id="@+id/speakButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:contentDescription="speak"
			android:src="@drawable/mic" 
			android:background="#FFFFFF"
			android:layout_margin="4dp"/>
		
	</LinearLayout>
	
	<LinearLayout
		android:id="@+id/settingsView"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">
		
		<Spinner
			android:id="@+id/emoteSpin"
	       	android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceSmall" />
		
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >

	    <AutoCompleteTextView
	        android:id="@+id/actionText"
	        android:layout_width="282dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:hint="@string/action"
	        android:imeOptions="actionDone"
	        android:inputType="text" />

	    <ImageButton
	        android:id="@+id/btnAction"
	        style="?android:attr/buttonStyleSmall"
	       	android:layout_width="30sp"
        	android:layout_height="30sp"
        	android:layout_margin="4dp"
        	android:background="#FFFFFF"
        	android:scaleType="center"
	        android:src="@drawable/arrow_down_green" />
	</LinearLayout>
	
	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >

	    <AutoCompleteTextView
	        android:id="@+id/poseText"
	        android:layout_width="282dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:hint="@string/pose"
	        android:imeOptions="actionDone"
	        android:inputType="text" />

	    <ImageButton
	        android:id="@+id/btnPose"
	        style="?android:attr/buttonStyleSmall"
	       	android:layout_width="30sp"
        	android:layout_height="30sp"
        	android:layout_margin="4dp"
        	android:background="#FFFFFF"
        	android:scaleType="center"
	        android:src="@drawable/arrow_down_green" />
	</LinearLayout>
	
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal" >
	
	    <CheckBox
	        android:id="@+id/webmCheckBox"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/webm" />
	
	    <CheckBox
	        android:id="@+id/hdCheckBox"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text="@string/hd" />
	    
	    </LinearLayout>
	
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:orientation="horizontal" >
	        
		    <TextView
		        android:id="@+id/voiceLabel"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:padding="5dp"
		        android:text="@string/voice" />
			
			<Spinner
				android:id="@+id/voiceSpin"
				android:layout_width="0px"
				android:layout_weight="1"
				android:layout_height="wrap_content"
				android:textAppearance="?android:attr/textAppearanceSmall" />
			
		</LinearLayout>

		<CheckBox
		    android:id="@+id/deviceVoiceCheckBox"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/deviceVoice" />

	<LinearLayout
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >

	    <AutoCompleteTextView
	        android:id="@+id/langText"
	        android:layout_width="282dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:hint="@string/language"
	        android:imeOptions="actionDone"
	        android:inputType="text" />

	    <ImageButton
	        android:id="@+id/btnLang"
	        style="?android:attr/buttonStyleSmall"
	       	android:layout_width="30sp"
        	android:layout_height="30sp"
        	android:layout_margin="4dp"
        	android:background="#FFFFFF"
        	android:scaleType="center"
	        android:src="@drawable/arrow_down_green" />
	</LinearLayout>
    
	</LinearLayout>
    
    <Button
        android:id="@+id/testButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="1dp"
        android:background="@drawable/ok_button"
        android:onClick="test"
        android:text="@string/test"
        android:textColor="@color/lgrey" >

        <requestFocus />
    </Button>

</LinearLayout>